log
Sat 15 Oct 2022 12:55:33 AM UTC: 
 heap.c | 30 +++++++++++++++++++++++-------
 1 file changed, 23 insertions(+), 7 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:15: error: implicit declaration of function ‘trunc’ [-Werror=implicit-function-declaration]
   31 |   int father= trunc(fatherD);
      |               ^~~~~
heap.c:31:15: error: incompatible implicit declaration of built-in function ‘trunc’ [-Werror]
heap.c:1:1: note: include ‘<math.h>’ or provide a declaration of ‘trunc’
  +++ |+#include <math.h>
    1 | #include <stdio.h>
cc1: all warnings being treated as errors
Compilation failed
0cea264
Sat 15 Oct 2022 12:56:02 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|2
total_score: 30/70
ec0e2c9
Sat 15 Oct 2022 12:59:56 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:3: error: expected ‘(’ before ‘pq’
   42 |   pq->size=pq->size+1;
      |   ^~
      |   (
Compilation failed
a51870f
Sat 15 Oct 2022 01:00:10 AM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|2
total_score: 30/70
68a6982
Sat 15 Oct 2022 01:01:55 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:24: error: expected ‘]’ before ‘;’ token
   42 |     aux=pq->heapArray[0;
      |                        ^
      |                        ]
heap.c:44:33: error: expected ‘;’ before ‘}’ token
   44 |     pq->heapArray[pq->size]=aux;
      |                                 ^
      |                                 ;
   45 |   }
      |   ~                              
Compilation failed
0e496c0
Sat 15 Oct 2022 01:02:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
66b0ab5
Sat 15 Oct 2022 01:04:15 AM UTC: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  4|2
total_score: 30/70
4f82000
Sat 15 Oct 2022 01:05:00 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
8259d2d
Sat 15 Oct 2022 01:10:40 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|2
total_score: 35/70
4b1ce7b
Sat 15 Oct 2022 01:11:24 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
23185c0
Sat 15 Oct 2022 01:11:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:19: error: expected identifier before ‘(’ token
   31 |     pq->capac=pq->(capac*2)+1;
      |                   ^
Compilation failed
4127676
Sat 15 Oct 2022 01:12:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
042ceea
Sat 15 Oct 2022 01:12:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
9bbc7f5
Sat 15 Oct 2022 01:12:32 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
84d2179
Sat 15 Oct 2022 01:12:53 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:17: error: lvalue required as left operand of assignment
   30 |   if (pq->size+1=pq->capac){
      |                 ^
Compilation failed
3a78f40
Sat 15 Oct 2022 01:13:05 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
c80091b
Sat 15 Oct 2022 01:34:49 AM UTC: 
 heap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  7|1
total_score: 45/70
9e0097c
Sat 15 Oct 2022 01:44:50 AM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:57:21: error: incompatible type for argument 1 of ‘free’
   57 |   free(pq->heapArray[pq->size]);
      |        ~~~~~~~~~~~~~^~~~~~~~~~
      |                     |
      |                     heapElem {aka struct nodo}
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:565:25: note: expected ‘void *’ but argument is of type ‘heapElem’ {aka ‘struct nodo’}
  565 | extern void free (void *__ptr) __THROW;
      |                   ~~~~~~^~~~~
In file included from test.c:4:
heap.c:52:13: error: unused variable ‘son1’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |             ^~~~
heap.c:52:7: error: unused variable ‘son’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
92cecd0
Sat 15 Oct 2022 01:45:18 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/string.h:33,
                 from test.c:3:
heap.c: In function ‘heap_pop’:
heap.c:57:27: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘void *’
   57 |   pq->heapArray[pq->size]=NULL;
      |                           ^~~~
In file included from test.c:4:
heap.c:52:13: error: unused variable ‘son1’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |             ^~~~
heap.c:52:7: error: unused variable ‘son’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
f498e4b
Sat 15 Oct 2022 01:45:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:57:27: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘int’
   57 |   pq->heapArray[pq->size]=0;
      |                           ^
heap.c:52:13: error: unused variable ‘son1’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |             ^~~~
heap.c:52:7: error: unused variable ‘son’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
e25cdf7
Sat 15 Oct 2022 01:46:09 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:52:13: error: unused variable ‘son1’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |             ^~~~
heap.c:52:7: error: unused variable ‘son’ [-Werror=unused-variable]
   52 |   int son=0,son1=0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
d7b77b0
Sat 15 Oct 2022 01:46:20 AM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 45/70
9ce3ffc
Sat 15 Oct 2022 02:05:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
ba71945
Sat 15 Oct 2022 02:08:19 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:58:35: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   58 |   pq->heapArray[pq->size].priority=NULL;
      |                                   ^
cc1: all warnings being treated as errors
Compilation failed
f491601
Sat 15 Oct 2022 02:08:27 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
be756ed
Sat 15 Oct 2022 02:19:53 AM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  7|1
total_score: 50/70
9643fdd
Sat 15 Oct 2022 02:22:50 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:53:7: error: ‘son1’ is used uninitialized in this function [-Werror=uninitialized]
   53 |   int son1,son2,son=0,father=0;
      |       ^~~~
heap.c:53:12: error: ‘son2’ is used uninitialized in this function [-Werror=uninitialized]
   53 |   int son1,son2,son=0,father=0;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
63f44b9
Sat 15 Oct 2022 02:23:34 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:60:29: error: ‘son2’ undeclared (first use in this function); did you mean ‘son’?
   60 |   while (son1 < pq->size || son2 < pq->size){
      |                             ^~~~
      |                             son
heap.c:60:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7f2bed8
Sat 15 Oct 2022 02:23:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:53:7: error: ‘son1’ is used uninitialized in this function [-Werror=uninitialized]
   53 |   int son1 ,son23 ,son=0,father=0;
      |       ^~~~
heap.c:53:13: error: ‘son23’ is used uninitialized in this function [-Werror=uninitialized]
   53 |   int son1 ,son23 ,son=0,father=0;
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
83199a4
Sat 15 Oct 2022 02:24:11 AM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 50/70
63b1999
